add image to product
